--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomicfoundation/hardhat-verify": "^1.1.1",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.9.2",
     "@openzeppelin/contracts-upgradeable": "^4.9.2",
     "@openzeppelin/test-helpers": "^0.5.15",
+    "dotenv": "^10.0.0",
     "hardhat": "^2.16.1",
-    "web3": "^1.10.0",
-    "dotenv": "^10.0.0"
+    "web3": "^1.10.0"
   }
 }
